Sync EditorsKit Settings to options visibility https://github.com/phpbits/block-options/issues/17

--- a/src/extensions/block-settings/styles/editor.scss
+++ b/src/extensions/block-settings/styles/editor.scss
@@ -14,6 +14,10 @@
     	&:last-child{
     		border-bottom: 0px;
     	}
+    	
+    	&:first-child{
+    		border-top: 0px;
+    	}
 	}
 
 	.components-modal__header {
